secondary commit with todo list, fixed a bug and a new README

--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -5,7 +5,7 @@
     "schools": "სკოლები"
   },
   "news": {
-    "latest": "უახლესი ამბები"
+    "latest": "სიახლეები"
   },
   "schools": {
     "title": "ჩვენი ფაკულტეტები"
