--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,5 +9,16 @@
   },
   "schools": {
     "title": "Our Faculties"
+  },
+  "navigation": {
+    "about": "About KIU",
+    "programs": "Programs",
+    "research": "Research",
+    "projects": "Projects",
+    "admission": "Admission",
+    "students": "Students",
+    "news": "News",
+    "campus": "Campus",
+    "vacancies": "Vacancies"
   }
 }
