--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -9,5 +9,16 @@
   },
   "schools": {
     "title": "ჩვენი ფაკულტეტები"
+  },
+  "navigation": {
+    "about": "KIU-ს შესახებ",
+    "programs": "პროგრამები",
+    "research": "კვლევა",
+    "projects": "პროექტები",
+    "admission": "მიღება",
+    "students": "სტუდენტები",
+    "news": "სიახლეები",
+    "campus": "კამპუსი",
+    "vacancies": "ვაკანსიები"
   }
 }
