--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -31,5 +31,137 @@
     "phone": "(+995) 577 477197",
     "infoEmail": "info@kiu.edu.ge",
     "copyright": "2025 kiu.edu.ge © ყველა უფლება დაცულია"
+  },
+  "homepage": {
+    "latestNews": {
+      "title": "უახლესი სიახლეები და განახლებები",
+      "news": [
+        {
+          "tag": "მიღება",
+          "tagColor": "yellow",
+          "title": "2025 წლის განაცხადები ღიაა",
+          "description": "შეუერთდით ლიდერების შემდეგ თაობას KIU-ში ჩვენი ყოვლისმომცველი პროგრამებით.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
+          "tag": "კვლევა",
+          "tagColor": "blue",
+          "title": "ახალი კვლევითი ცენტრი იხსნება",
+          "description": "თანამედროვე ობიექტები განვითარებული კვლევისა და ინოვაციებისთვის.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
+          "tag": "კამპუსის ცხოვრება",
+          "tagColor": "blue",
+          "title": "სტუდენტური აქტივობების კვირა",
+          "description": "აღმოაჩინეთ კლუბები და ორგანიზაციები ჩვენს ცხოველ კამპუსზე.",
+          "link": "წაიკითხეთ მეტი >"
+        },
+        {
+          "tag": "პარტნიორობა",
+          "tagColor": "yellow",
+          "title": "TUM-თან თანამშრომლობა",
+          "description": "ახალი ერთობლივი პროგრამები მიუნხენის უნივერსიტეტთან.",
+          "link": "წაიკითხეთ მეტი >"
+        }
+      ]
+    },
+    "hero": {
+      "title": "სადაც ცოდნა ქმნის მომავალს!",
+      "titleHighlight": "მომავალს!",
+      "motto": "Hic Scientia futūrum creat!",
+      "description": "ქუთაისის საერთაშორისო უნივერსიტეტმა 2020 წელს გახსნა კარები სტუდენტების პირველ კლასთან. ჩვენი მიზანია თანდათან გავხდეთ განათლების, მეცნიერებისა და ტექნოლოგიების საერთაშორისო ცენტრი რეგიონში.",
+      "applyButton": "განაცხადე ახლავე",
+      "exploreButton": "პროგრამების შესწავლა",
+      "imageCaption": "თანამედროვე კამპუსი ქუთაისში",
+      "imageDescription": "თანამედროვე ობიექტები მსოფლიო დონის განათლებისთვის"
+    },
+    "whyChoose": {
+      "title": "რატომ აირჩიოთ KIU?",
+      "subtitle": "წამყვანი როლის შემსრულებელი განათლების მომავალში საქართველოსა და რეგიონში",
+      "features": [
+        {
+          "icon": "book.svg",
+          "title": "ინგლისურენოვანი პროგრამები",
+          "description": "ყველა ბაკალავრის პროგრამა ინგლისურ ენაზე, რაც სტუდენტებს მომზადებს გლობალური კარიერისთვის.",
+          "bgColor": "light-blue"
+        },
+        {
+          "icon": "handshake.svg",
+          "title": "TUM-თან პარტნიორობა",
+          "description": "თანამშრომლობა მიუნხენის ტექნიკურ უნივერსიტეტთან, ევროპის წამყვან ტექნიკურ უნივერსიტეტთან.",
+          "bgColor": "light-yellow"
+        },
+        {
+          "icon": "investment.svg",
+          "title": "1 მილიარდი ევროს ინვესტიცია",
+          "description": "ქართუ ფონდის მასშტაბური ინვესტიცია თანამედროვე ობიექტებსა და რესურსებში.",
+          "bgColor": "light-gray"
+        }
+      ]
+    },
+    "about": {
+      "title": "KIU-ს შესახებ",
+      "description": "უნივერსიტეტის კამპუსი მდებარეობს ქუთაისში, საქართველოს მეორე უდიდეს ქალაქში. KIU-მ 2020 წელს გახსნა კარები სტუდენტების პირველ კლასთან. ჩვენი მიზანია თანდათან გავხდეთ განათლების, მეცნიერებისა და ტექნოლოგიების საერთაშორისო ცენტრი რეგიონში. ამჟამად, ჩვენ გვაქვს ინგლისურენოვანი ბაკალავრის პროგრამები, ხოლო მომავალში გეგმავთ განვითარება პროფესიული, ბაკალავრისა და ბაკალავრის შემდეგ ხარისხები საქართველოს ეკონომიკური ზრდისთვის კვალიფიციური სამუშაო ძალის განვითარებისთვის. ქართუ ფონდმა ინვესტიცია განახორციელა 1 მილიარდზე მეტი ევრო უნივერსიტეტში, ხოლო KIU არის სახელმწიფო უნივერსიტეტი. ჩვენ თანამშრომლობთ მიუნხენის ტექნიკურ უნივერსიტეტთან (TUM), ხოლო პროფ. დოქტორი ვოლფგანგ ა. ჰერმანი მსახურობს საპატიო პრეზიდენტად.",
+      "stats": [
+        { "number": "2020", "label": "დაფუძნდა" },
+        { "number": "1B€", "label": "ინვესტიცია" },
+        { "number": "100%", "label": "ინგლისურენოვანი პროგრამები" },
+        { "number": "TUM", "label": "პარტნიორობა" }
+      ]
+    },
+    "schools": {
+      "title": "ჩვენი სკოლები",
+      "titleHighlight": "სკოლები",
+      "subtitle": "აღმოაჩინეთ თქვენი გზა აკადემიურ ზეგანაჩენობისკენ",
+      "programs": [
+        {
+          "icon": "hat.svg",
+          "title": "ბაკალავრის პროგრამა",
+          "description": "ყოვლისმომცველი ბაკალავრის განათლება სხვადასხვა სფეროში",
+          "color": "blue"
+        },
+        {
+          "icon": "masters-program.svg",
+          "title": "მაგისტრის პროგრამა",
+          "description": "მოწინავე ბაკალავრის შემდეგ სწავლება სპეციალიზებული ექსპერტიზისთვის",
+          "color": "yellow"
+        },
+        {
+          "icon": "chemestry.svg",
+          "title": "დოქტორის პროგრამა",
+          "description": "კვლევაზე ორიენტირებული PhD პროგრამები აკადემიური ლიდერებისთვის",
+          "color": "dark-blue"
+        },
+        {
+          "icon": "arrow.svg",
+          "title": "ერთციკლიანი პროგრამა",
+          "description": "ინტეგრირებული პროგრამები, რომლებიც აერთიანებს რამდენიმე აკადემიურ დონეს",
+          "color": "green"
+        }
+      ]
+    },
+    "videoGallery": {
+      "title": "ვიდეო გალერეა",
+      "titleHighlight": "გალერეა",
+      "subtitle": "განიცადეთ KIU ჩვენი კამპუსის ვიდეოების მეშვეობით",
+      "videos": [
+        {
+          "title": "დაფუძნების ხედვა",
+          "description": "ინტერვიუ ბიძინა ივანიშვილთან და ეკატერინა ხვედელიძესთან",
+          "thumbnail": "/videos/founding-view.jpg"
+        },
+        {
+          "title": "უცხოური კავშირები",
+          "description": "მიუნხენის ტექნიკური უნივერსიტეტის პრეზიდენტი ქუთაისის საერთაშორისო უნივერსიტეტის შესახებ",
+          "thumbnail": "/videos/foreign-connections.jpg"
+        },
+        {
+          "title": "კამპუსი",
+          "description": "ქუთაისის საერთაშორისო უნივერსიტეტის კამპუსი",
+          "thumbnail": "/videos/campus.jpg"
+        }
+      ]
+    }
   }
 }
