--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -35,6 +35,7 @@
   "homepage": {
     "latestNews": {
       "title": "უახლესი სიახლეები და განახლებები",
+      "readFullStory": "წაიკითხე სრული ამბავი",
       "news": [
         {
           "tag": "მიღება",
@@ -147,21 +148,128 @@
       "subtitle": "განიცადეთ KIU ჩვენი კამპუსის ვიდეოების მეშვეობით",
       "videos": [
         {
-          "title": "დაფუძნების ხედვა",
-          "description": "ინტერვიუ ბიძინა ივანიშვილთან და ეკატერინა ხვედელიძესთან",
-          "thumbnail": "/videos/founding-view.jpg"
+          "title": "კამპუსის ტური",
+          "description": "გაიარეთ ვირტუალური ტური ჩვენი თანამედროვე ობიექტებისა და ლამაზი კამპუსის ტერიტორიის."
         },
         {
-          "title": "უცხოური კავშირები",
-          "description": "მიუნხენის ტექნიკური უნივერსიტეტის პრეზიდენტი ქუთაისის საერთაშორისო უნივერსიტეტის შესახებ",
-          "thumbnail": "/videos/foreign-connections.jpg"
+          "title": "სტუდენტური ცხოვრება",
+          "description": "აღმოაჩინეთ ცხოველი სტუდენტური საზოგადოება და საინტერესო აქტივობები KIU-ში."
         },
         {
-          "title": "კამპუსი",
-          "description": "ქუთაისის საერთაშორისო უნივერსიტეტის კამპუსი",
-          "thumbnail": "/videos/campus.jpg"
+          "title": "კვლევითი ბრწყინვალება",
+          "description": "შეისწავლეთ ჩვენი თანამედროვე კვლევითი ობიექტები და ინოვაციური პროექტები."
         }
       ]
+    }
+  },
+  "research": {
+    "hero": {
+      "tag": "კვლევითი სრულყოფილება",
+      "title1": "კვლევა",
+      "title2": "KIU-ში",
+      "description": "მეცნიერული ცოდნისა და ინოვაციის წინსვლა მოწინავე კვლევითი ობიექტების, საერთაშორისო თანამშრომლობისა და თანამედროვე ინფრასტრუქტურის მეშვეობით"
+    },
+    "strategy": {
+      "tag": "ჩვენი ხედვა",
+      "title1": "კვლევის",
+      "title2": "სტრატეგია",
+      "content1": "KIU მიზნად ისახავს გახდეს საერთაშორისო კვლევისა და განათლების ცენტრი რეგიონში. KIU-ს კვლევითი სტრატეგია მოიცავს თანამედროვე ობიექტებისა და თანამედროვე კვლევითი ინფრასტრუქტურის განვითარებას.",
+      "content2": "კვლევითი ობიექტები და ლაბორატორიები ორგანიზებული იქნება KIU-ში მაგისტრატურის, დოქტორანტურისა და პოსტდოქტორანტურის პროგრამების განვითარების მხარდასაჭერად, მეცნიერებისა და წამყვანი ექსპერტების მოზიდვის გზით შესაბამის სფეროებში.",
+      "content3": "KIU-ს სტრატეგიული განვითარების გეგმა ითვალისწინებს ჰადრონული თერაპიის ცენტრის შექმნას. ეს კვლევითი ცენტრი შესთავაზებს თავის ობიექტებს მეცნიერული კვლევისთვის ნაწილაკების ფიზიკაში, რადიაციულ ფიზიკასა და ბიოფიზიკაში, ასევე მხარს დაუჭერს პროტონული თერაპიის ცენტრის ოპერაციებს, KIU-ს სამედიცინო ფაკულტეტთან ერთად.",
+      "highlight": {
+        "title": "საერთაშორისო თანამშრომლობა",
+        "description": "KIU უჭერს მხარს აკადემიური, ადმინისტრაციული და კვლევითი პერსონალის საერთაშორისო სამეცნიერო თანამშრომლობას. პარტნიორობის შესახებ დამატებითი ინფორმაციისთვის, გთხოვთ ეწვიოთ KIU-ს ვებსაიტს (www.kiu.edu.ge) ან დაგვიკავშირდეთ info@kiu.edu.ge"
+      }
+    },
+    "htc": {
+      "tag": "მოწინავე ტექნოლოგია",
+      "title1": "ჰადრონული თერაპიის",
+      "title2": "ცენტრი",
+      "title3": "(HTC)",
+      "subtitle": "მოწინავე ნაწილაკების აჩქარებელი ტექნოლოგია გარღვევითი კვლევისა და სამედიცინო მკურნალობისთვის",
+      "description": "ქუთაისის საერთაშორისო უნივერსიტეტში განთავსდება ჰადრონული თერაპიის ცენტრი. ცენტრი აღიჭურვება ციკლოტრონის ნაწილაკების აჩქარებლებით მეცნიერული კვლევისა და სამედიცინო მკურნალობის ჩასატარებლად.",
+      "facilitiesTitle": "HTC უზრუნველყოფს ობიექტებსა და ლაბორატორიებს კვლევისა და განათლებისთვის შემდეგ ძირითად მიმართულებებში:",
+      "area1": {
+        "title": "სამედიცინო და ექსპერიმენტული ფიზიკა",
+        "description": "მოწინავე კვლევა სამედიცინო ფიზიკის გამოყენებასა და ექსპერიმენტულ მეთოდოლოგიებში მოწინავე ჯანდაცვის გადაწყვეტილებებისთვის"
+      },
+      "area2": {
+        "title": "სამედიცინო და რადიაციული ბიოფიზიკა",
+        "description": "რადიაციის ბიოლოგიური ეფექტების ყოვლისმომცველი შესწავლა და ინოვაციური სამედიცინო გამოყენებები"
+      },
+      "area3": {
+        "title": "რადიოქიმია",
+        "description": "მოწინავე ქიმიური პროცესები რადიოაქტიური მასალებისა და იზოტოპების კვლევის ჩათვლით"
+      },
+      "cyclotron": {
+        "title": "თანამედროვე ციკლოტრონის ტექნოლოგია",
+        "description": "მოწინავე ნაწილაკების აჩქარებელი სისტემები ზუსტი კვლევისა და მკურნალობისთვის"
+      }
+    },
+    "campus": {
+      "tag": "ადგილმდებარეობა",
+      "title": "ქუთაისის კამპუსი",
+      "description": "ქუთაისის საერთაშორისო უნივერსიტეტის კამპუსის ობიექტებს უზრუნველყოფს IBA (Ion Beam Applications SA) ციკლოტრონები. ცენტრი შეიქმნება როგორც მეცნიერული კვლევის, ასევე კიბოს პაციენტების მკურნალობის მხარდასაჭერად.",
+      "stats": {
+        "partner": "IBA",
+        "partnerLabel": "ტექნოლოგიური პარტნიორი",
+        "year": "2024",
+        "yearLabel": "მოსალოდნელი გახსნა"
+      }
+    },
+    "protonClinic": {
+      "tag": "სამედიცინო ინოვაცია",
+      "title1": "პროტონული თერაპიის",
+      "title2": "კლინიკა",
+      "subtitle": "რადიაციული თერაპიის ყველაზე მოწინავე ფორმა კიბოს ზუსტი მკურნალობისთვის",
+      "description": "პროტონული თერაპიის კლინიკა შეიქმნება ქუთაისის საერთაშორისო უნივერსიტეტის კამპუსში და შესთავაზებს პაციენტებს კომბინირებულ დიაგნოსტიკურ და სამკურნალო ობიექტებს. კიბოს კვლევა და მკურნალობა დაფუძნებული იქნება თანამედროვე პროტონული თერაპიის მეთოდებზე.",
+      "highlight": {
+        "title": "მოწინავე მკურნალობის ტექნოლოგია",
+        "content1": "პროტონული თერაპია ითვლება რადიაციული თერაპიის ყველაზე მოწინავე ფორმად, რომელიც იყენებს მაღალენერგიულ პროტონულ სხივს სიმსივნეების დასასხივებლად. ამ მოწინავე გადაწყვეტის გამოყენების სფერო ფართოვდება.",
+        "content2": "ცენტრი შეუერთდება მსოფლიოს უდიდეს და ყველაზე მოწინავე პროტონული თერაპიის ცენტრების ქსელს."
+      },
+      "feature1": {
+        "title": "ზუსტი მკურნალობა",
+        "description": "მიზნობრივი თერაპია მინიმალური გვერდითი ეფექტებით"
+      },
+      "feature2": {
+        "title": "კვლევის ინტეგრაცია",
+        "description": "კომბინირებული მკურნალობისა და კვლევის ობიექტები"
+      },
+      "feature3": {
+        "title": "გლობალური ქსელი",
+        "description": "დაკავშირებული მსოფლიო პროტონული თერაპიის ცენტრებთან"
+      }
+    },
+    "publications": {
+      "tag": "აკადემიური სრულყოფილება",
+      "title1": "კვლევითი",
+      "title2": "პუბლიკაციები",
+      "subtitle": "ყოველწლიური კონფერენციები, რომლებიც წარმოაჩენს მოწინავე კვლევებსა და მეცნიერულ მიღწევებს მრავალ დისციპლინაში",
+      "description": "ქუთაისის საერთაშორისო უნივერსიტეტი ატარებს ყოველწლიურ კონფერენციებს ყოველი სასწავლო წლის ბოლოს, სადაც უნივერსიტეტის პროფესორები და მეცნიერები შეუძლიათ წარადგინონ თავიანთი კვლევა. კონფერენცია ორგანიზებულია პარალელურ სესიებად, კვლევის თემების მიხედვით.",
+      "conf2021": {
+        "title": "KIU ყოველწლიური კონფერენცია 2021",
+        "track1": "მენეჯმენტი",
+        "track2": "მათემატიკა და კომპიუტერული მეცნიერებები",
+        "track3": "ფიზიკა"
+      },
+      "conf2022": {
+        "title": "KIU ყოველწლიური კონფერენცია 2022",
+        "track1": "მენეჯმენტი",
+        "track2": "მათემატიკა და კომპიუტერული მეცნიერებები"
+      },
+      "conf2023": {
+        "title": "KIU ყოველწლიური კონფერენცია 2023",
+        "track1": "მენეჯმენტი",
+        "track2": "მათემატიკა და კომპიუტერული მეცნიერებები"
+      },
+      "conf2024": {
+        "title": "KIU ყოველწლიური კონფერენცია 2024",
+        "track1": "მენეჯმენტი",
+        "track2": "მათემატიკა და კომპიუტერული მეცნიერებები"
+      },
+      "conferenceTitle": "ყოველწლიური კვლევითი კონფერენცია",
+      "conferenceDescription": "შეუერთდით წამყვან მკვლევარებსა და აკადემიკოსებს მთელი მსოფლიოდან ჩვენს პრესტიჟულ ყოველწლიურ კონფერენციაზე"
     }
   }
 }
