Fixed the languages

--- a/i18n/ge.json
+++ b/i18n/ge.json
@@ -103,7 +103,7 @@
     },
     "about": {
       "title": "KIU-ს შესახებ",
-      "description": "უნივერსიტეტის კამპუსი მდებარეობს ქუთაისში, საქართველოს მეორე უდიდეს ქალაქში. KIU-მ 2020 წელს გახსნა კარები სტუდენტების პირველ კლასთან. ჩვენი მიზანია თანდათან გავხდეთ განათლების, მეცნიერებისა და ტექნოლოგიების საერთაშორისო ცენტრი რეგიონში. ამჟამად, ჩვენ გვაქვს ინგლისურენოვანი ბაკალავრის პროგრამები, ხოლო მომავალში გეგმავთ განვითარება პროფესიული, ბაკალავრისა და ბაკალავრის შემდეგ ხარისხები საქართველოს ეკონომიკური ზრდისთვის კვალიფიციური სამუშაო ძალის განვითარებისთვის. ქართუ ფონდმა ინვესტიცია განახორციელა 1 მილიარდზე მეტი ევრო უნივერსიტეტში, ხოლო KIU არის სახელმწიფო უნივერსიტეტი. ჩვენ თანამშრომლობთ მიუნხენის ტექნიკურ უნივერსიტეტთან (TUM), ხოლო პროფ. დოქტორი ვოლფგანგ ა. ჰერმანი მსახურობს საპატიო პრეზიდენტად.",
+      "description": "უნივერსიტეტის კამპუსი მდებარეობს ქუთაისში, საქართველოს მეორე უდიდეს ქალაქში. KIU-მ 2020 წელს გახსნა კარები სტუდენტების პირველ კლასთან. ჩვენი მიზანია თანდათან გავხდეთ განათლების, მეცნიერებისა და ტექნოლოგიების საერთაშორისო ცენტრი რეგიონში. \n ამჟამად, ჩვენ გვაქვს ინგლისურენოვანი ბაკალავრის პროგრამები, ხოლო მომავალში გეგმავთ განვითარება პროფესიული, ბაკალავრისა და ბაკალავრის შემდეგ ხარისხები საქართველოს ეკონომიკური ზრდისთვის კვალიფიციური სამუშაო ძალის განვითარებისთვის. \n ქართუ ფონდმა ინვესტიცია განახორციელა 1 მილიარდზე მეტი ევრო უნივერსიტეტში, ხოლო KIU არის სახელმწიფო უნივერსიტეტი. \n ჩვენ ვთანამშრომლობთ მიუნხენის ტექნიკურ უნივერსიტეტთან (TUM), ხოლო პროფ. დოქტორი ვოლფგანგ ა. ჰერმანი მსახურობს საპატიო პრეზიდენტად.",
       "stats": [
         { "number": "2020", "label": "დაფუძნდა" },
         { "number": "1B€", "label": "ინვესტიცია" },
